samples/_failures_safe/1761727038_e3ed47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54fecf46.c: In function ‘tokenize’:
./samples/SAFE/__tmp_54fecf46.c:167:44: error: expected ‘)’ at end of input
  167 |                     (current == '>' && next
      |                     ~                      ^
      |                                            )
./samples/SAFE/__tmp_54fecf46.c:167:21: error: expected declaration or statement at end of input
  167 |                     (current == '>' && next
      |                     ^
./samples/SAFE/__tmp_54fecf46.c:167:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54fecf46.c:167:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54fecf46.c:167:21: error: expected declaration or statement at end of input
